{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 123,
  "lineage": "eb4a3e43-710c-0edb-1846-6453b2ba066c",
  "resources": [
    {
      "module": "module.deploy-kr-internet-gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:internet-gateway/igw-0cec89c2192f108fb",
            "id": "igw-0cec89c2192f108fb",
            "owner_id": "210620017481",
            "tags": {
              "Name": "kr-carevo-dev-internet-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-internet-gateway",
              "Organization": "krypton",
              "Program": "carevo",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-nat-gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037afae26eb3b7d97",
            "arn": "arn:aws:ec2:us-east-1:210620017481:elastic-ip/eipalloc-037afae26eb3b7d97",
            "domain": "vpc",
            "id": "eipalloc-037afae26eb3b7d97",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-22-149-195.compute-1.amazonaws.com",
            "public_ip": "107.22.149.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-nat-gateway-eip",
              "Program": "carevo"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-nat-gateway-eip",
              "Organization": "krypton",
              "Program": "carevo",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-nat-gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kr_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037afae26eb3b7d97",
            "association_id": "eipassoc-0962584a8b1eaebca",
            "connectivity_type": "public",
            "id": "nat-05f0bc26f2265c0f4",
            "network_interface_id": "eni-0799e4c746b35c807",
            "private_ip": "10.10.1.41",
            "public_ip": "107.22.149.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bea264a70fe49d6c",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-nat-gateway",
              "Program": "carevo"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-nat-gateway",
              "Organization": "krypton",
              "Program": "carevo",
              "email": "vinasundar.aws@gmail.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-route-tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "kr_rt_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-carevo-dev-private-rt-0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05c621747e87cce7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f0bc26f2265c0f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c621747e87cce7d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-public-rt-0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cec89c2192f108fb",
            "id": "r-rtb-03b907c9fdf7727a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b907c9fdf7727a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kr_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-carevo-dev-private-rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:route-table/rtb-05c621747e87cce7d",
            "id": "rtb-05c621747e87cce7d",
            "owner_id": "210620017481",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-private-rt",
              "Organisation": "krypton",
              "Program": "carevo",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-private-rt",
              "Organisation": "krypton",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "email": "vinasundar.aws@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-public-rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:route-table/rtb-03b907c9fdf7727a3",
            "id": "rtb-03b907c9fdf7727a3",
            "owner_id": "210620017481",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-public-rt",
              "Organisation": "krypton",
              "Program": "carevo",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kr-carevo-dev-public-rt",
              "Organisation": "krypton",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "public",
              "email": "vinasundar.aws@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-carevo-dev-private-rt-kr-carevo-dev-private-subnet-ict-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003df253a22277112",
            "route_table_id": "rtb-05c621747e87cce7d",
            "subnet_id": "subnet-0ef31ad93d12b9f82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-private-rt-kr-carevo-dev-private-subnet-ict-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c96cd17ce96f13d",
            "route_table_id": "rtb-05c621747e87cce7d",
            "subnet_id": "subnet-0f5ed25ed37a549d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-private-rt-kr-carevo-dev-private-subnet-rst-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0628db088ec1909c8",
            "route_table_id": "rtb-05c621747e87cce7d",
            "subnet_id": "subnet-091305d24fc9331c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-private-rt-kr-carevo-dev-private-subnet-rst-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0852eaed128e02d11",
            "route_table_id": "rtb-05c621747e87cce7d",
            "subnet_id": "subnet-0a7179b5320f1e3d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-public-rt-kr-carevo-dev-public-subnet-ect-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dd47796b9b7f993",
            "route_table_id": "rtb-03b907c9fdf7727a3",
            "subnet_id": "subnet-0bea264a70fe49d6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-public-rt-kr-carevo-dev-public-subnet-ect-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a4dee846924d6c4",
            "route_table_id": "rtb-03b907c9fdf7727a3",
            "subnet_id": "subnet-08d0fb4d629a6544f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-internet-gateway.aws_internet_gateway.kr_igw",
            "module.deploy-kr-nat-gateway.aws_eip.nat",
            "module.deploy-kr-nat-gateway.aws_nat_gateway.kr_nat_gateway",
            "module.deploy-kr-route-tables.aws_route_table.kr_route_table",
            "module.deploy-kr-subnets.aws_subnet.kr_subnet",
            "module.deploy-kr-subnets.data.aws_availability_zones.available",
            "module.deploy-kr-subnets.data.aws_subnet.created",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kr_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-app-ict",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group/sg-01ba14103dbe3a618",
            "description": "Internal Security group for carevo dev environment - Allows controlled internal access and from VPC and private subnets",
            "egress": [],
            "id": "sg-01ba14103dbe3a618",
            "ingress": [],
            "name": "kr-carevo-dev-app-ict-sg",
            "name_prefix": "",
            "owner_id": "210620017481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kr-carevo-dev-app-ict-sg",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-app-ict-sg",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-app-rst",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group/sg-0dd41105f551354cf",
            "description": "Restricted Security group for carevo dev environment - No external access, only from within VPC and private subnets",
            "egress": [],
            "id": "sg-0dd41105f551354cf",
            "ingress": [],
            "name": "kr-carevo-dev-app-rst-sg",
            "name_prefix": "",
            "owner_id": "210620017481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kr-carevo-dev-app-rst-sg",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-app-rst-sg",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-web-ect",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group/sg-05d5e72a0f6de67d1",
            "description": "External Security group for carevo dev environment - Allows HTTP/HTTPS from VPC and app port from private subnets",
            "egress": [],
            "id": "sg-05d5e72a0f6de67d1",
            "ingress": [],
            "name": "kr-carevo-dev-web-ect-sg",
            "name_prefix": "",
            "owner_id": "210620017481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kr-carevo-dev-web-ect-sg",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-web-ect-sg",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-security-groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "kr_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-app-ict__eg003__3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group-rule/sgr-02501faf8b8536ca8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow app port from internal SG to app SG",
            "from_port": 8080,
            "id": "sgr-02501faf8b8536ca8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0dd41105f551354cf",
            "security_group_id": "sg-01ba14103dbe3a618",
            "security_group_rule_id": "sgr-02501faf8b8536ca8",
            "tags": {
              "Name": "kr-app-ict-eg003",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-app-ict-eg003",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-security-groups.aws_security_group.kr_security_group",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-app-rst__eg001__5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group-rule/sgr-0a54514e6d8fc3876",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow https port from restricted SG to services",
            "from_port": 443,
            "id": "sgr-0a54514e6d8fc3876",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dd41105f551354cf",
            "security_group_rule_id": "sgr-0a54514e6d8fc3876",
            "tags": {
              "Name": "kr-app-rst-eg001",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-app-rst-eg001",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-security-groups.aws_security_group.kr_security_group",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-web-ect__eg003__1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group-rule/sgr-0a4f48330b784a3ef",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal app port from web SG to internal SG",
            "from_port": 8080,
            "id": "sgr-0a4f48330b784a3ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01ba14103dbe3a618",
            "security_group_id": "sg-05d5e72a0f6de67d1",
            "security_group_rule_id": "sgr-0a4f48330b784a3ef",
            "tags": {
              "Name": "kr-web-ect-eg003",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-web-ect-eg003",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-security-groups.aws_security_group.kr_security_group",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-security-groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kr_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-app-ict__in003__2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group-rule/sgr-0f96679e534bc74cf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal app port from web SG to internal SG",
            "from_port": 8080,
            "id": "sgr-0f96679e534bc74cf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05d5e72a0f6de67d1",
            "security_group_id": "sg-01ba14103dbe3a618",
            "security_group_rule_id": "sgr-0f96679e534bc74cf",
            "tags": {
              "Name": "kr-app-ict-in003",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-app-ict-in003",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-security-groups.aws_security_group.kr_security_group",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-app-rst__in003__4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group-rule/sgr-03f4a0d36350660a0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow app port from internal SG to restricted app SG",
            "from_port": 8080,
            "id": "sgr-03f4a0d36350660a0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01ba14103dbe3a618",
            "security_group_id": "sg-0dd41105f551354cf",
            "security_group_rule_id": "sgr-03f4a0d36350660a0",
            "tags": {
              "Name": "kr-app-rst-in003",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-app-rst-in003",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-security-groups.aws_security_group.kr_security_group",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-web-ect__in001__0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group-rule/sgr-01f190d46913cf374",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP/HTTPS internet to web SG",
            "from_port": 443,
            "id": "sgr-01f190d46913cf374",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d5e72a0f6de67d1",
            "security_group_rule_id": "sgr-01f190d46913cf374",
            "tags": {
              "Name": "kr-web-ect-in001",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-web-ect-in001",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-security-groups.aws_security_group.kr_security_group",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-web-ect__in002__0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:security-group-rule/sgr-06810e55251acad25",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP/HTTPS internet to web SG",
            "from_port": 80,
            "id": "sgr-06810e55251acad25",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d5e72a0f6de67d1",
            "security_group_rule_id": "sgr-06810e55251acad25",
            "tags": {
              "Name": "kr-web-ect-in002",
              "Team": "Carevo DevOps Network Security"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-web-ect-in002",
              "Organization": "krypton",
              "Program": "carevo",
              "Team": "Carevo DevOps Network Security",
              "email": "vinasundar.aws@gmail.com"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-security-groups.aws_security_group.kr_security_group",
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-subnets",
      "mode": "data",
      "type": "aws_subnet",
      "name": "created",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-carevo-dev-private-subnet-ict-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0ef31ad93d12b9f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 123,
            "cidr_block": "10.10.3.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef31ad93d12b9f82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-ict",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "kr-carevo-dev-private-subnet-ict-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0f5ed25ed37a549d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 123,
            "cidr_block": "10.10.3.128/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5ed25ed37a549d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-ict",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "kr-carevo-dev-private-subnet-rst-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-091305d24fc9331c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 123,
            "cidr_block": "10.10.2.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091305d24fc9331c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-rst",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "kr-carevo-dev-private-subnet-rst-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0a7179b5320f1e3d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 123,
            "cidr_block": "10.10.2.128/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7179b5320f1e3d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-rst",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "kr-carevo-dev-public-subnet-ect-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0bea264a70fe49d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 123,
            "cidr_block": "10.10.1.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bea264a70fe49d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-public-subnet-ect",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "public",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "kr-carevo-dev-public-subnet-ect-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-08d0fb4d629a6544f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 123,
            "cidr_block": "10.10.1.128/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d0fb4d629a6544f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-public-subnet-ect",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "public",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.deploy-kr-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kr-carevo-dev-private-subnet-ict-us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0ef31ad93d12b9f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef31ad93d12b9f82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "Name": "kr-carevo-dev-private-subnet-ict",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-ict",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-private-subnet-ict-us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0f5ed25ed37a549d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.3.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5ed25ed37a549d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "Name": "kr-carevo-dev-private-subnet-ict",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-ict",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-private-subnet-rst-us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-091305d24fc9331c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091305d24fc9331c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "Name": "kr-carevo-dev-private-subnet-rst",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-rst",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-private-subnet-rst-us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0a7179b5320f1e3d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7179b5320f1e3d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "Name": "kr-carevo-dev-private-subnet-rst",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-private-subnet-rst",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "private",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-public-subnet-ect-us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-0bea264a70fe49d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bea264a70fe49d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "Name": "kr-carevo-dev-public-subnet-ect",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "public",
              "VPC": "kr-carevo-dev-vpc"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "dev",
              "Index": "0",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-public-subnet-ect",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "public",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": "kr-carevo-dev-public-subnet-ect-us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:subnet/subnet-08d0fb4d629a6544f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d0fb4d629a6544f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210620017481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "Name": "kr-carevo-dev-public-subnet-ect",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "public",
              "VPC": "kr-carevo-dev-vpc"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "dev",
              "Index": "1",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-public-subnet-ect",
              "Organization": "krypton",
              "Program": "carevo",
              "Type": "public",
              "VPC": "kr-carevo-dev-vpc",
              "email": "vinasundar.aws@gmail.com"
            },
            "vpc_id": "vpc-0498c870c9ba38361"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.aws_vpc.kr_vpc",
            "module.deploy-kr-vpc.data.aws_vpc.existing",
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-kr-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210620017481:vpc/vpc-0498c870c9ba38361",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0dc913a1f82fb1d79",
            "default_route_table_id": "rtb-090757ebcaaf7a6d6",
            "default_security_group_id": "sg-0fe71256358f2b4fa",
            "dhcp_options_id": "dopt-0d62c577dfb0e59e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0498c870c9ba38361",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090757ebcaaf7a6d6",
            "owner_id": "210620017481",
            "tags": {
              "Name": "kr-carevo-dev-vpc",
              "name": "kr-carevo-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kr-carevo-dev-vpc",
              "Organization": "krypton",
              "Program": "carevo",
              "email": "vinasundar.aws@gmail.com",
              "name": "kr-carevo-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.deploy-kr-vpc.data.aws_vpcs.existing"
          ]
        }
      ]
    }
  ]
}